Added various markdown tests

--- a/RF.Rmd
+++ b/RF.Rmd
@@ -2,7 +2,13 @@
 title: "Random Forest"
 author: "Ed Jee"
 date: "22 January 2019"
-output: html_document
+output:
+    html_document:
+      code_folding: show
+      highlight: tango
+      theme: readable
+      toc: yes
+      toc_float: yes
 ---
 
 ```{r setup, include=FALSE}
@@ -22,10 +28,10 @@ X.test[,1] = seq(-2, 2, length.out = 101)
 # Train a causal forest.
 W = rbinom(n, 1, 0.4 + 0.2 * (X[,1] > 0))
 Y = pmax(X[,1], 0) * W + X[,2] + pmin(X[,3], 0) + rnorm(n)
-tau.forest = causal_forest(X, Y, W)
+tau.forest = causal_forest(X, Y, W, num.trees = 4000)
 
 # Estimate treatment effects for the training data using out-of-bag prediction.
-tau.hat.oob = predict(tau.forest)
+tau.hat.oob = predict(tau.forest, estimate.variance = TRUE)
 hist(tau.hat.oob$predictions)
 
 # Estimate treatment effects for the test sample.
@@ -42,7 +48,6 @@ average_treatment_effect(tau.forest, target.sample = "all")
 average_treatment_effect(tau.forest, target.sample = "treated")
 
 # Add confidence intervals for heterogeneous treatment effects; growing more trees is now recommended.
-tau.forest = causal_forest(X, Y, W, num.trees = 4000)
 tau.hat = predict(tau.forest, X.test, estimate.variance = TRUE)
 sigma.hat = sqrt(tau.hat$variance.estimates)
 plot(X.test[,1], tau.hat$predictions, ylim = range(tau.hat$predictions + 1.96 * sigma.hat, tau.hat$predictions - 1.96 * sigma.hat, 0, 2), xlab = "x", ylab = "tau", type = "l")
@@ -53,7 +58,51 @@ lines(X.test[,1], pmax(0, X.test[,1]), col = 2, lty = 1)
 
 
 
+
+
+
 ```{r}
+# Generate data.
+n = 2000; p = 10
+X = matrix(rnorm(n*p), n, p)
+X.test = matrix(0, 101, p)
+X.test[,1] = seq(-2, 2, length.out = 101)
+
+# Train a causal forest.
+W = rbinom(n, 1, 0.4 + 0.2 * (X[,1] > 0))
+Y = pmax(X[,1], -1) * W + X[,2] + pmin(X[,3], 0) + rnorm(n)
+tau.forest = causal_forest(X, Y, W, num.trees = 4000)
+
+# Estimate treatment effects for the training data using out-of-bag prediction.
+tau.hat.oob = predict(tau.forest, estimate.variance = TRUE)
+hist(tau.hat.oob$predictions)
+
+# Estimate treatment effects for the test sample.
+tau.hat = predict(tau.forest, X.test)
+plot(X.test[,1], tau.hat$predictions, ylim = range(tau.hat$predictions, 0, 2), xlab = "x", ylab = "tau", type = "l")
+lines(X.test[,1], pmax(-1, X.test[,1]), col = 2, lty = 2)
+
+# Estimate the conditional average treatment effect on the full sample (CATE).
+average_treatment_effect(tau.forest, target.sample = "all")
+
+# Estimate the conditional average treatment effect on the treated sample (CATT).
+# Here, we don't expect much difference between the CATE and the CATT, since
+# treatment assignment was randomized.
+average_treatment_effect(tau.forest, target.sample = "treated")
+
+# Add confidence intervals for heterogeneous treatment effects; growing more trees is now recommended.
+tau.hat = predict(tau.forest, X.test, estimate.variance = TRUE)
+sigma.hat = sqrt(tau.hat$variance.estimates)
+plot(X.test[,1], tau.hat$predictions, ylim = range(tau.hat$predictions + 1.96 * sigma.hat, tau.hat$predictions - 1.96 * sigma.hat, 0, 2), xlab = "x", ylab = "tau", type = "l")
+lines(X.test[,1], tau.hat$predictions + 1.96 * sigma.hat, col = 1, lty = 2)
+lines(X.test[,1], tau.hat$predictions - 1.96 * sigma.hat, col = 1, lty = 2)
+lines(X.test[,1], pmax(0, X.test[,1]), col = 2, lty = 1)
+```
+
+
+
+
+```{r, eval = FALSE}
 # In some examples, pre-fitting models for Y and W separately may
 # be helpful (e.g., if different models use different covariates).
 # In some applications, one may even want to get Y.hat and W.hat
@@ -88,71 +137,10 @@ test_calibration(tau.forest)
 ```
 
 
-```{r}
-comp_df <- tibble("tau_true" = TAU, "tau_hat" = predict(tau.forest)$predictions)
-comp_df %>% 
-  gather(variable, value) %>% 
-  ggplot(aes(x = value, fill = variable)) +
-  geom_histogram() +
-  facet_wrap(~variable)
-```
 
 
 
-```{r}
-rm(list = ls())
-create_sim_data <- function(N = 1000,
-                            prop_defier = 0.2,
-                            beta_defier = -5,
-                            beta_complier = 5,
-                            intercept_both = 10,
-                            sd_both = 5){
-  N_defier <- floor(prop_defier*N)
-  N_complier <- N - N_defier
-  x <- rnorm(N, mean = 10, sd = 10)
-  y_defier <- intercept_both + x[1:N_defier]*beta_defier + rnorm(N_defier, mean = 0, sd = sd_both)
-  y_complier <- intercept_both + x[(N_defier+1):N]*beta_complier + rnorm(N_complier, mean = 0, sd = sd_both)
-  y <- c(y_defier,
-         y_complier)
-  sim_df <- tibble(x, y)
-  return(sim_df)
-}
-sim_df <- create_sim_data()
-
-```
-
-
-
-
-```{r}
-n = 2000; p = 10
-X = matrix(rnorm(n*p), n, p)
-X.test = matrix(0, 101, p)
-X.test[,1] = seq(-2, 2, length.out = 101)
-
-# Train a causal forest.
-W = rbinom(n, 1, 0.4 + 0.2 * (X[,1] > 0))
-Y = pmax(X[,1], -2) * W + X[,2] + pmin(X[,3], 0) + rnorm(n)
-tau.forest = causal_forest(X %>% as_tibble(), Y, W, num.trees = 4000)
-
-
-# Estimate treatment effects for the training data using out-of-bag prediction.
-tau.hat.oob = predict(tau.forest)
-hist(tau.hat.oob$predictions)
-```
-
-```{r}
-tau.hat = predict(tau.forest, X.test, estimate.variance = TRUE)
-sigma.hat = sqrt(tau.hat$variance.estimates)
-plot(X.test[,1], tau.hat$predictions, ylim = range(tau.hat$predictions + 1.96 * sigma.hat, tau.hat$predictions - 1.96 * sigma.hat, 0, 2), xlab = "x", ylab = "tau", type = "l")
-lines(X.test[,1], tau.hat$predictions + 1.96 * sigma.hat, col = 1, lty = 2)
-lines(X.test[,1], tau.hat$predictions - 1.96 * sigma.hat, col = 1, lty = 2)
-lines(X.test[,1], pmax(0, X.test[,1]), col = 2, lty = 1)
-```
-
-
-
-```{r}
+```{r, eval = FALSE}
 library(ggplot2)
 df <- tibble("x" = X.test[, 1], "tau" = tau.hat$predictions) %>% 
   mutate(tau_lo = tau - 1.96*sigma.hat,
