--- a/Random Forest Simulations.Rmd
+++ b/Random Forest Simulations.Rmd
@@ -153,7 +153,7 @@ An initial glance suggests that there are heterogeneous effects estimated that a
 # Binary Instrument and Continuous Heterogeneous Treatment Effect
 
 
-Creating data, treatment effect of instrument now varies continuously (actually a normal r.v. with mean 1 and sd 2):
+Creating data, treatment effect of instrument now varies continuously (actually a normal r.v. with mean 0.2 and sd 0.2):
 ```{r}
 rm(list = ls())
 create_sim_data <- function(n = 1000, n_variables = 10, binary = TRUE, prop_treated = 0.5, error_sd = 1,Z_FUN = runif, z_a = NULL, z_b = NULL, tau_FUN = rnorm, ...){
@@ -247,20 +247,20 @@ tau_comparison_df %>%
 library(broom)
 library(modelr)
 library(purrr)
-binary_boots <- continuous_fake_df %>%
+boots <- continuous_fake_df %>%
   select(-tau) %>% 
-  bootstrap(n = 4000)
+  bootstrap(n = 1000)
 ols_on_boot <- function(strap){
   lm(Y ~ . , data = strap)
 }
-binary_boot_models <- binary_boots %>%
+boot_models <- boots %>%
   mutate(model = map(strap, ols_on_boot),
          coef_info = map(model, tidy))
 
-binary_boot_coefs <- binary_boot_models %>%
+boot_coefs <- boot_models %>%
   unnest(coef_info)
 
-binary_boot_coefs %>%
+boot_coefs %>%
   filter(term == "Z") %>%
   ggplot(aes(x = estimate)) +
   geom_histogram()
@@ -271,7 +271,7 @@ binary_boot_coefs %>%
 
 combining forest with bootstrap histograms
 ```{r}
-tau_boot_coefs <- binary_boot_coefs %>%
+tau_boot_coefs <- boot_coefs %>%
   filter(term == "Z") %>%
   select(value = estimate) %>%
   mutate(variable = "boot")
@@ -282,5 +282,78 @@ tau_p %>%
   ggplot(aes(x = value, fill = variable)) +
   geom_density() +
   facet_wrap(~variable)
+```
+
+```{r}
+tau_p %>% 
+  group_by(variable) %>% 
+  summarise(tau_mean = mean(value),
+            tau_sd = sd(value),
+            tau_IQR = IQR(value),
+            tau_min = min(value),
+            tau_max = max(value),
+            tau_range = tau_max - tau_min)
+```
+
+
+# Creating a Test
+
+```{r}
+tau_comparison_df %>% 
+  select(tau, predictions, variance.estimates) %>% 
+  arrange(predictions) %>% 
+  mutate(sigma_hat = sqrt(variance.estimates),
+         prediction_lo = predictions - 1.96*sigma_hat,
+         prediction_hi = predictions + 1.96*sigma_hat,
+         t_stat = predictions / sigma_hat,
+         critical_value = qt(0.95, 990, lower.tail = FALSE),
+         reject_h0 = ifelse(t_stat < critical_value, 1, 0)) %>% 
+  filter(critical_value == 1)
+```
+
+
+
+```{r}
+run_one_test <- function(simulated_data){
+  simulated_data_df <- tibble("Y" = simulated_data$Y, "Z" = simulated_data$Z, "tau" = simulated_data$tau) %>% 
+  bind_cols(as_tibble(simulated_data$X))
+  print(mean(simulated_data_df$tau))
+  forest_first_stage <- causal_forest(X = simulated_data$X, Y = simulated_data$Y, W = simulated_data$Z)
+  tau_hat_oob = predict(forest_first_stage, estimate.variance = TRUE)
+  tau_comparison_df <- bind_cols(simulated_data_df, tau_hat_oob)
+  tau_comparison_df <- tau_comparison_df %>% 
+    select(tau, predictions, variance.estimates) %>% 
+    mutate(sigma_hat = sqrt(variance.estimates),
+         prediction_lo = predictions - 1.96*sigma_hat,
+         prediction_hi = predictions + 1.96*sigma_hat,
+         t_stat = predictions / sigma_hat,
+         critical_value = qt(0.95, 990, lower.tail = FALSE),
+         reject_h0 = ifelse(t_stat < critical_value, 1, 0))
+  return(tau_comparison_df)
+}
+
+ed <- run_one_test(simulated_data = create_sim_data(n = 100000, tau_FUN = binary_complier_defier, beta_complier = 0.2, beta_defier = 0.05, prop_defier = 0.1))
+ 
+```
+
+
+```{r}
+ed %>% 
+  filter(reject_h0 == 1)
+```
+
+```{r}
+ed %>% ggplot(aes(x = tau)) +
+  geom_histogram()
+```
+
+
+```{r}
+ed %>% 
+  arrange(predictions) %>% 
+  mutate(rank = row_number()) %>% 
+  ggplot(aes(x = rank, y = predictions, ymin = prediction_lo, ymax = prediction_hi)) +
+  geom_point(aes(colour = factor(reject_h0))) +
+  geom_ribbon(alpha = 0.1)
 ```
 
